➕ add @emotion/react

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "dist"
   ],
   "dependencies": {
-    "@emotion/css": "^11.9.0"
+    "@emotion/css": "^11.9.0",
+    "@emotion/react": "^11.9.3"
   }
 }
