--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
+    "@types/react-portal": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "babel-eslint": "^10.0.3",
@@ -62,6 +63,8 @@
   ],
   "dependencies": {
     "@emotion/css": "^11.9.0",
-    "@emotion/react": "^11.9.3"
+    "@emotion/react": "^11.9.3",
+    "@fdn-ui/icons-react": "^0.0.11",
+    "react-portal": "^4.2.2"
   }
 }
